--- a/css/animations.css
+++ b/css/animations.css
@@ -32,8 +32,8 @@
 
 @keyframes fadein{
     to{
-        opacity: 0;
-        visibility: hidden;
+        opacity: 1;
+        visibility: visible;
     }
 }
 
