--- a/css/searchbox.css
+++ b/css/searchbox.css
@@ -49,6 +49,7 @@
   column-gap: 2rem;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 100vh;
   background-color: var(--bg-color);
@@ -78,13 +79,14 @@
 
 .search__form {
   width: 100%;
-  height: 30vh;
+  height: auto;
+  min-height: 40vh;
 }
 
 .frame {
   width: 100%;
   border: none;
-  height: 100%;
+  height: 50vh;
 }
 
 .search__button{
@@ -111,18 +113,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   padding-bottom: 2rem;
-  row-gap: 1.5rem;
-  column-gap: 1rem;
-  height: 100vh;
+  gap: 1rem;
+  min-height: 100vh;
 }
 
 .field-container{
     display: inherit;
     align-items: center;
     justify-content: center;
-    column-gap: 1rem;
+    flex-wrap: wrap;
+    gap: 1rem;
     width: 100%;
 }
 
@@ -133,7 +135,8 @@
   column-gap: 5px;
   border: 1.5px solid lightgrey;
   border-radius: 25px;
-  width: 20%;
+  width: auto;
+  min-width: 20%;
   padding: 6px;
   padding-left: 1.5rem;
   font-family: var(--primary-font);
