--- a/css/section.css
+++ b/css/section.css
@@ -1,13 +1,15 @@
 /* hero section styling */
-.hero {
+.hero-section {
   background-image: url("../assets/places/van.jpg");
   background-size: cover;
   border-radius: 10px;
   box-shadow: var(--image-shadow);
   position: relative;
+  margin-bottom: 2rem;
+
 }
 
-.hero p {
+.hero-section p {
   position: absolute;
   text-align: left;
   top: 10%;
@@ -21,7 +23,7 @@
   animation-range: entry 0% cover 50%;
 }
 
-.hero > p > span {
+.hero-section > p > span {
   color: var(--primary-color);
 }
 
@@ -72,6 +74,7 @@
   width: 85%;
   overflow: auto;
   overflow: hidden;
+  margin-bottom: 2rem;
 }
 
 .card__slide {
@@ -110,6 +113,7 @@
   justify-content: space-evenly;
   width: 85%;
   margin: auto;
+  margin-bottom: 2rem;
 }
 
 .flight__card {
@@ -182,6 +186,7 @@
   align-items: center;
   justify-content: space-evenly;
   width: 85%;
+  margin-bottom: 2rem;
   overflow: hidden;
 }
 
