--- a/css/searchbox.css
+++ b/css/searchbox.css
@@ -123,7 +123,7 @@
     display: inherit;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 1rem;
     width: 100%;
 }
@@ -135,8 +135,8 @@
   column-gap: 5px;
   border: 1.5px solid lightgrey;
   border-radius: 25px;
-  width: auto;
-  min-width: 20%;
+  width: 20%;
+  /* min-width: 20vw; */
   padding: 6px;
   padding-left: 1.5rem;
   font-family: var(--primary-font);
